--- a/style.css
+++ b/style.css
@@ -77,25 +77,39 @@ img {
  --------------- */
 
  @media screen and (max-width: 419px) {
-
-    .container {
-      width: 100%;
+    * {
+      box-sizing: border-box;
+      margin: 0px;
+      padding: 0px;
     }
+
+    h1 {
+      color: #61ce4e;
+      font-size: 30px;
+      margin-bottom: 20px;
+    }
+    img {
+      margin-bottom: 20px;
+    }
+
     .row {
       font-size: 18px;
-      width: 90%;
-      padding: 0 10px;
-      text-align: center;
+      width: 100%;
+      margin-top: 40px;
+      padding: 0 5%;
     }
+
     #lezioni .row>.left,
     #lezioni .row>.right,
     #steps .row>.left,
     #steps .row>.central,
     #steps .row>.right {
-      float: none;
       width: 100%;
+      margin-bottom: 15px;
     }
-    #lezioni .row img {
-      min-width: 60%;
+    #why .row>.first,
+    #why .row>.second,
+    #why .row>.third {
+      margin-top: 20px;
     }
  }
