--- a/style.css
+++ b/style.css
@@ -88,15 +88,23 @@ img {
       font-size: 30px;
       margin-bottom: 20px;
     }
+    h3 {
+      font-size: 1.5em;
+      margin-bottom: 10px;
+    }
     img {
-      margin-bottom: 20px;
+      height: 140px;
+      width: auto;
+      margin-top: 30px;
     }
 
+    .container {
+      padding: 20px;
+    }
     .row {
       font-size: 18px;
       width: 100%;
-      margin-top: 40px;
-      padding: 0 5%;
+      margin-top: 0px;
     }
 
     #lezioni .row>.left,
@@ -105,11 +113,10 @@ img {
     #steps .row>.central,
     #steps .row>.right {
       width: 100%;
-      margin-bottom: 15px;
     }
     #why .row>.first,
     #why .row>.second,
     #why .row>.third {
-      margin-top: 20px;
+      margin-top: 0px;
     }
  }
